[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/world/Statics/ControlBoardIOs.gd" type="Script" id=1]
[ext_resource path="res://assets/shadermaterials/JitterFreeMaterial.tres" type="Material" id=2]
[ext_resource path="res://assets/world/control_board_ios.png" type="Texture" id=3]
[ext_resource path="res://assets/world/control_board.png" type="Texture" id=4]
[ext_resource path="res://src/world/Statics/ControlBoard.gd" type="Script" id=5]
[ext_resource path="res://src/Watchers/PuzzleIOStateWatcher.gd" type="Script" id=6]
[ext_resource path="res://src/Holders/PuzzleIOStateHolder.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 13 )

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Hovered Shining"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Hovered"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle Shining"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=8]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 1
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 1
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
priority = 0

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Hovered/node = SubResource( 4 )
states/Hovered/position = Vector2( 535, 204 )
"states/Hovered Shining/node" = SubResource( 3 )
"states/Hovered Shining/position" = Vector2( 535, 61 )
states/Idle/node = SubResource( 6 )
states/Idle/position = Vector2( 259, 204 )
"states/Idle Shining/node" = SubResource( 5 )
"states/Idle Shining/position" = Vector2( 259, 61 )
transitions = [ "Idle Shining", "Idle", SubResource( 7 ), "Hovered Shining", "Hovered", SubResource( 8 ), "Idle", "Idle Shining", SubResource( 9 ), "Hovered", "Hovered Shining", SubResource( 10 ), "Idle Shining", "Hovered Shining", SubResource( 11 ), "Hovered Shining", "Idle Shining", SubResource( 12 ), "Idle", "Hovered", SubResource( 13 ), "Hovered", "Idle", SubResource( 14 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="Animation" id=17]
length = 0.001
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Board:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Hovered Shining"
length = 0.675
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Board:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18, 19, 10 ]
}

[sub_resource type="Animation" id=19]
length = 0.001
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Board:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "Idle Shining"
length = 0.675
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Board:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 0 ]
}

[node name="ControlBoard" type="StaticBody2D"]
collision_layer = 2147484672
collision_mask = 0
script = ExtResource( 5 )

[node name="Board" type="Sprite" parent="."]
material = ExtResource( 2 )
texture = ExtResource( 4 )
vframes = 2
hframes = 10

[node name="Shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="IOs" type="Node2D" parent="."]
script = ExtResource( 1 )
max_in = 1
max_out = 1

[node name="i0" type="Sprite" parent="IOs"]
material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 8
hframes = 4
frame = 2

[node name="i1" type="Sprite" parent="IOs"]
visible = false
material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 8
hframes = 4
frame = 4

[node name="i2" type="Sprite" parent="IOs"]
visible = false
material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 8
hframes = 4
frame = 8

[node name="i3" type="Sprite" parent="IOs"]
visible = false
material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 8
hframes = 4
frame = 12

[node name="o0" type="Sprite" parent="IOs"]
material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 8
hframes = 4
frame = 16

[node name="o1" type="Sprite" parent="IOs"]
visible = false
material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 8
hframes = 4
frame = 20

[node name="o2" type="Sprite" parent="IOs"]
visible = false
material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 8
hframes = 4
frame = 24

[node name="o3" type="Sprite" parent="IOs"]
visible = false
material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 8
hframes = 4
frame = 28

[node name="ClickArea" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 4096
collision_mask = 0

[node name="Zone" type="CollisionShape2D" parent="ClickArea"]
visible = false
shape = SubResource( 2 )

[node name="PuzzleIOStateWatcher" type="Node" parent="."]
script = ExtResource( 6 )

[node name="PuzzleIOStateHolder" type="Node" parent="."]
script = ExtResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hovered = SubResource( 17 )
"anims/Hovered Shining" = SubResource( 18 )
anims/Idle = SubResource( 19 )
"anims/Idle Shining" = SubResource( 20 )
